--- a/contact.html
+++ b/contact.html
@@ -31,11 +31,11 @@
 
         <div class="row">
 
-            <div class="col-md-8" "col-sm-12">
+            <div class="form1 col-md-8 col-sm-12">
 
-                <h1>
-                    Contact
-                </h1>
+                    <div class="page-header">
+                        <h1>Contact</h1>
+                    </div>
 
                 <form>
                     <div class="form-group">
@@ -56,19 +56,19 @@
 
             </div>
         
-            <div class="col-md-4" "col-sm-12">
+            <div class="connect1 col-md-3 col-md-offset-1 col-sm-12">
 
                 <div class="panel panel-default">
                     <div class="panel-heading">Connect With Me</div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-md-4">
-                                <img id="gitHub" class="img-responsive" src="assets/images/github.jpg" alt="GitHub" width="100" height="100">
+                                <img class="img-responsive" src="assets/images/github.jpg" alt="GitHub" width="100" height="100">
                             </div>
                             <div class="col-md-4">
-                                <img id="linkedIn" class="img-responsive" src="assets/images/linkedin.png" alt="Linkedin" width="100" height="100">
+                                <img class="img-responsive" src="assets/images/linkedin.png" alt="Linkedin" width="100" height="100">
                             </div>
-                            <div id="stackOverflow" class="col-md-4">
+                            <div class="col-md-4">
                                 <img class="img-responsive" src="assets/images/stackoverflow.png" alt="StackOverflow" width="100" height="100">
                             </div>
                         </div>
@@ -79,6 +79,12 @@
         </div>
     
     </div>
+
+    <footer class="navbar-default navbar-fixed-bottom">
+        <div class="container-fluid">
+          <p>Joseph Kampa 2018</p>
+        </div>
+    </footer>
 
 </body>
 
