--- a/portfolio.html
+++ b/portfolio.html
@@ -31,20 +31,47 @@
 
         <div class="row">
 
-            <div class="col-md-6" "col-sm-12">
-                    <img id="hangMan" class="img-responsive" src="assets/images/chess.jpg" alt="Hangman" width="150" height="150">
-                    <img id="rpg" class="img-responsive" src="assets/images/dragon.jpg" alt="Role Playing Game" width="150" height="150">
-                    <img id="triva" class="img-responsive" src="assets/images/lightbulb.jpg" alt="Trivia" width="150" height="150">
+            <div class="page-header">
+            <h1>Portfolio</h1>
             </div>
 
-            <div class="col-md-6" "col-sm-12">
-                    <img id="widget" class="img-responsive" src="assets/images/pick.jpg" alt="Widget" width="150" height="150">
-                    <img id="rps" class="img-responsive" src="assets/images/spinner.jpg" alt="Rock Paper Scissors" width="150" height="150">
+            <div class="column1 col-md-2 col-sm-12">
+                <img id="hangman" class="img-responsive" src="assets/images/chess.jpg" alt="Hangman">
+                    <div id="caption">
+                        <p>Hangman</p>
+                    </div>
+                <img id="rpg" class="img-responsive" src="assets/images/dragon.jpg" alt="Role Playing Game">
+                    <div id="caption">
+                        <p>Role Playing Game</p>
+                    </div>
+            </div>        
+            <div class="column2 col-md-2 col-sm-12">
+                <img id="widget" class="img-responsive" src="assets/images/pick.jpg" alt="Widget">
+                    <div id="caption">
+                        <p>Widget</p>
+                    </div>
+                <img id="rps" class="img-responsive" src="assets/images/spinner.jpg" alt="Rock Paper Scissors">
+                    <div id="caption">
+                        <p>Rock Paper Scissors</p>
+                    </div>
             </div>
+            <div class="column3 col-md-2 col-sm-12">
+                <img id="triva" class="img-responsive" src="assets/images/lightbulb.jpg" alt="Trivia">
+                    <div id="caption">
+                        <p>Trivia</p>
+                    </div>
+            </div>
+
 
         </div>
 
     </div>
+
+    <footer class="navbar-default navbar-fixed-bottom">
+        <div class="container-fluid">
+          <p>Joseph Kampa 2018</p>
+        </div>
+    </footer>
 
 </body>
 
