--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
             <div class="column3 col-md-2 col-sm-12">
                 <img id="triva" class="img-responsive" src="assets/images/lightbulb.jpg" alt="Trivia">
                     <div id="caption">
-                        <p>Trivia</p>
+                        <p><a style="color:white" href="https://jkampa3.github.io/Homework_5_Basic_T/" target="_top">Trivia</a></p>
                     </div>
             </div>
 
