--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
             <div class="column2 col-md-2 col-sm-12">
                 <img id="widget" class="img-responsive" src="assets/images/pick.jpg" alt="Widget">
                     <div id="caption">
-                        <p>Widget</p>
+                        <p><a style="color:white" href="https://jkampa3.github.io/Homework_Week_6/" target="_top">Widget</a></p>
                     </div>
                 <img id="rps" class="img-responsive" src="assets/images/spinner.jpg" alt="Rock Paper Scissors">
                     <div id="caption">
