--- a/portfolio.html
+++ b/portfolio.html
@@ -50,9 +50,9 @@
                     <div id="caption">
                         <p><a style="color:white" href="https://jkampa3.github.io/Homework_Week_6/" target="_top">Widget</a></p>
                     </div>
-                <img id="rps" class="img-responsive" src="assets/images/spinner.jpg" alt="Rock Paper Scissors">
+                <img id="rps" class="img-responsive" src="assets/images/spinner.jpg" alt="Firebase">
                     <div id="caption">
-                        <p>Rock Paper Scissors</p>
+                        <p><a style="color:white" href="https://jkampa3.github.io/Homework_7_Basic/" target="_top">Firebase</a></p>
                     </div>
             </div>
             <div class="column3 col-md-2 col-sm-12">
